# vkplus

./: .flake8  .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  pylint.yml  python-app.yml
tests/: dem_generator_test.py
tests/dem_generator/: test_dem_generator.py
vkplus/: README.md  bot.py  commands_for_everyone.json  commands_settings.json  config.json  main.py  pyproject.toml  start.cmd  time_started.txt
vkplus/commands/: advancements.py  auto_iris_farm.py  blank.py  bomb.py  code.py  demotivator.py  help.py  image_generators.py  info.py  interactive_commands.py  ping.py  random_case.py  roleplay.py  settings.py  show_config.py  weather.py
vkplus/filters/: __init__.py  filters.py  for_everyone_filter.py  not_setting_filter.py
vkplus/middlewares/: has_prefix_middleware.py  is_me_middleware.py
vkplus/utils/: apisession.py  edit_msg.py  emojis.py  request_url.py
vkplus/vkplus/commands/: auto_iris_farm.py  bomb.py  image_generators.py  info.py  ping.py  weather.py
